# carlos

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PROGRAM_PLAN.md  README.md
.agents/: PLANS.md  ralph-prompt.md  reviewer_sessions.json  spec_reviewer.md
.agents/done/: EXECPLAN_001_large_session_smoothness.md  EXECPLAN_002_runtime_modularization.md  EXECPLAN_004_claude_backend.md  EXECPLAN_005_claude_resume_history_import.md  EXECPLAN_006_claude_exit_plan_mode.md  EXECPLAN_008_dictation.md
.agents/execplans/: EXECPLAN_001_large_session_smoothness.md  EXECPLAN_002_runtime_modularization.md  EXECPLAN_003_structural_hygiene_followup.md  EXECPLAN_004_claude_backend.md  EXECPLAN_005_claude_resume_history_import.md  EXECPLAN_006_claude_exit_plan_mode.md  EXECPLAN_007_code_quality_bar.md  EXECPLAN_008_dictation.md
.agents/reviewers/: engineering_reviewer.md
.github/workflows/: release.yml
docs/app-server-schema/: ClientRequest.json  CommandExecutionRequestApprovalParams.json  ServerRequest.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
examples/ralph-loop/: AGENTS.md  PROGRAM_PLAN.md
scripts/: termius-scroll-diagnose.sh
src/: app.rs  backend.rs  claude_backend.rs  clipboard.rs  event.rs  main.rs  protocol.rs  protocol_params.rs  tests.rs  theme.rs
src/app/: approval_parsing.rs  approval_state.rs  backend_setup.rs  cli.rs  context_usage.rs  dictation_state.rs  input.rs  input_events.rs  input_history_state.rs  item_history.rs  mobile_mouse.rs  mod.rs  models.rs  mouse_events.rs  notification_items.rs  notifications.rs  overlay_render.rs  perf.rs  perf_bench.rs  perf_session.rs  perf_synthetic.rs  picker_delete_dialog.rs  picker_render.rs  ralph.rs  ralph_runtime_state.rs  render.rs  render_cache_state.rs  render_input.rs  runtime_settings_state.rs  selection.rs  state.rs  state_dictation.rs  state_input.rs  state_settings.rs  state_transcript.rs  style_convert.rs  terminal_ui.rs  text.rs  tool_diff.rs  tool_format.rs  (+8 more)
src/claude_backend/: exit_plan.rs  history.rs  mod.rs  process.rs  session_file.rs  session_fork.rs  snapshot.rs  token_usage.rs  translate.rs  types.rs  user_record.rs
src/dictation/: audio.rs  audio_tests.rs  capture.rs  (+10 more)
(+17 files in other folders)
