[package]
name = "carlos"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
ansi-to-tui = "8.0.1"
base64 = "0.22"
crossterm = "0.29"
ratatui = "0.29"
ratatui-core = "0.1.0"
ratatui-interact = "0.2.0"
ratatui-textarea = "0.8.0"
serde_json = "1"
shlex = "1"
textwrap = "0.16"
tui-markdown = { git = "https://github.com/lightsofapollo/tui-markdown.git", rev = "819cbca7675178947357a88e9e4a007bfb085ccf" }
unicode-segmentation = "1"
unicode-width = "0.1"
uuid = { version = "1", features = ["v4"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
